Bug 1991696 - Fix New Tab Refined Story Cards disappearing on hover in High Contrast Mode. r=home-newtab-reviewers,maxx
Differential Revision: https://phabricator.services.mozilla.com/D267665

--- a/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/DSCard/_DSCard.scss
+++ b/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/DSCard/_DSCard.scss
@@ -643,13 +643,14 @@ $ds-card-image-gradient-solid: rgba(0, 0, 0, 100%);
   .card-stp-button-hover-background {
     height: 100%;
     padding-block-start: 0;
-    background: var(--button-background-color-ghost);
+    background: transparent;
 
     .card-stp-button-position-wrapper {
       inset-block-start: unset;
       // this value needs to equal the current padding of the card
       inset-block-end: var(--space-medium);
       inset-inline-end: var(--space-large);
+      background: var(--button-background-color-ghost);
     }
   }
 
